--- a/build.gradle
+++ b/build.gradle
@@ -16,10 +16,13 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.0'
+    runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
 
     compileOnly 'org.springframework.boot:spring-boot-devtools'
 
     implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
+
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
